--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ server.port=8277
 #mysql database configuratioins
 spring.datasource.url = jdbc:mysql://localhost:3306/scm20
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 
 #jpa configurations
 spring.jpa.show.sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.format_sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
